Добавлен переход в GitHub при кликах по заголовку и по лицензии

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="container-fluid h-100 d-flex flex-column justify-content-between">
       <div class="row flex-grow-0">
         <div class="col">
-          <h1 class="title text-center">XML Beautifier App</h1>
+          <h1 id="title" class="title text-center">XML Beautifier App</h1>
         </div>
       </div>
       <div class="row flex-grow-1">
@@ -33,7 +33,7 @@
       <div class="row flex-grow-0 py-2">
         <div class="col text-center">
           <div class="copyright">Copyright &copy; 2020 Andrey Lozunov</div>
-          <div class="license">The app released under the <span class="mit">MIT License</span></div>
+          <div class="license">The app released under the <span id='mit' class="mit">MIT License</span></div>
         </div>
       </div>
     </div>
