Подключена библиотека для сброса стилей

--- a/src/html/app.html
+++ b/src/html/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>XML Beautifier App</title>
+    <link rel="stylesheet" href="../css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="../css/app.css">
   </head>
   <body class="app">
