Запрещено редактирование поля output

--- a/src/html/app.html
+++ b/src/html/app.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="app__xml-area-container">
-        <div id="output" class="app__xml-area" autocapitalize="off" spellcheck="false"></div>
+        <div id="output" contenteditable="true" class="app__xml-area" autocapitalize="off" spellcheck="false"></div>
       </div>
       <div class="app__footer">
           <div class="copyright">Copyright &copy; 2020 Andrey Lozunov</div>
